Infrastructure/k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: raiseyourvoice-web
spec:
  selector:
    app: raiseyourvoice-web
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
